# maybe

./: .clang-format  .gitignore  CMakeLists.txt  README.md  make_deps.sh  notes.txt
research/: 01_code_layout.md  arrays.cts  desk.txt  fndef.md  maybearrays2.cts  syntax_playground.md  test.py  variables.txt
samples/: 001_helloworld.src  veryfirst.src
src/: CMakeLists.txt  beginendtokeninserter.cpp  beginendtokeninserter.h  command_line.cpp  command_line.h  compiler.cpp  compiler.h  compiler_main.cpp  consts.h  filereader.cpp  filereader.h  globals.cpp  globals.h  log.cpp  log.h  loglevel.h  parser.cpp  parser.h  std.h  tokenimplicitinserter.cpp  tokenimplicitinserter.h  tokenizer.cpp  tokenizer.h  utils.cpp  utils.h
toys/kaleidoscope/: CMakeLists.txt  KaleidoscopeJIT.h  toy.cpp
